finished adding inline comments to help understand code

--- a/src/Home.css
+++ b/src/Home.css
@@ -3,27 +3,17 @@
   background-color: lightblue;
 }
 
-h1 {
-  color: black;
+h1, h2 {
+  color: darkblue;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+h3 {
+  color: white;
 }
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 200px;
   padding: 20px;
   color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
